--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -10,6 +10,9 @@
 					<a class="d-inline-block" href="https://github.com/s-meiser" target="_blank">
 						<i class="fa-brands fa-github"></i>
 					</a>
+					<a class="mx-2 d-inline-block" href="https://www.linkedin.com/in/sebastian-meiser/" target="_blank">
+						<i class="fa-brands fa-linkedin"></i>
+					</a>
 					<a class="mx-2 d-inline-block" href="mailto:sebastian.meiser@gmail.com" target="_blank">
 						<i class="fa-regular fa-envelope"></i>
 					</a>
