--- a/app/templates/threeDimensional.html.twig
+++ b/app/templates/threeDimensional.html.twig
@@ -9,7 +9,7 @@
 				<button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
 			</div>
 			<div class="toast-body">
-				Pre-Release
+				Preview
 			</div>
 		</div>
 	</div>
@@ -59,7 +59,17 @@
 	<div class="zoom"></div>#}
 
 	<div class="cameraContainer">
-		<div class="domContainer content-menu"></div>
+		<div class="domContainer content-subject">
+			<div class="text-white">
+				<p class="fs-1">Hi, my name is Sebastian</p>
+				<p class="fs-4">and I love programming</p>
+				<p class="fs-6 mt-5">Sadly, this site is not finished yet, but you can see what you can do with threejs ;)</p>
+				<a href="{{ path('index') }}">
+					<button class="btn btn-orange py-2 fs-5 fw-bold mt-4 rounded-5 px-4">Get in touch</button>
+				</a>
+			</div>
+		</div>
+
 		<div class="domContainer credit-tree">
 			<div class="credit-box">
 				<a href="https://skfb.ly/6QWJM">TreeA</a> by BotondBencsik
