--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -1,9 +1,7 @@
 {% extends 'html_header.html.twig' %}
 
 {% block body %}
-	<div data-controller="landingpage"></div>
-
-	<div class="">
+	<div data-controller="landingpage" class="">
 		<div class="d-flex justify-content-between sm-icons ">
 			<div class="col-3 margin-left mt-5">
 				<div class="m-3 fs-4">
