[Task] Setup html/css transitions

--- a/app/templates/flat.html.twig
+++ b/app/templates/flat.html.twig
@@ -30,10 +30,6 @@
                             <nav class="navbar" >
                                 <button class="navbar-toggler"
                                         type="button"
-                                        data-bs-toggle="collapse"
-                                        data-bs-target="#navbarSupportedContent"
-                                        aria-controls="navbarSupportedContent"
-                                        aria-expanded="false"
                                         aria-label="Toggle navigation"
                                         data-action="click->flat#navbar"
                                 >
@@ -49,16 +45,25 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid d-flex justify-content-end p-0">
-            <div class="menu-container col-4 ">
-                menu-content
-            </div>
-        </div>
-        <div class="container mt-3">
-            <div class="row">
-                <div class="col">
-                    Content
+        <div class="container-fluid content-container p-0 m-0">
+            <div class="row p-0 m-0">
+                <div class="border navbar-grid-effect">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                Content
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <div class="navbar-container">
+                    <div class="row p-0 m-0">
+                        <div class="menu-container col">
+                            menu-content
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
