--- a/app/assets/scss/themes/default/flat.scss
+++ b/app/assets/scss/themes/default/flat.scss
@@ -1,7 +1,7 @@
 #menu-button {
   @media (min-width: 992px) {
-    .navbar-expand-lg .navbar-toggler {
-      display: block;
+    .navbar-toggler {
+      //display: block;
     }
   }
 
@@ -31,7 +31,6 @@
   }
 
   .navbar-toggler-icon {
-    display: inline-block;
     width: 1.5em;
     height: 1.5em;
     vertical-align: middle;
@@ -46,3 +45,47 @@
   background-color: white;
 }
 
+.navbar-container {
+  display: inline-flex;
+  position: relative;
+  background-color: #f2f2f2;
+  border: 1px solid #bbbbbb;
+  margin-left: 0;
+  left: 100%;
+  transition: all 1s ease-in 100ms;
+  width: 0;
+}
+
+.navbar-container:is(.column-4) {
+  left: 0;
+  width: 33.333333333%;
+}
+.navbar-container:not(.show) {
+  overflow-x: hidden;
+  transition: all 1s ease-out 0s;
+}
+
+.navbar-grid-effect {
+  width: 100%;
+  transition: all 1s ease-out 250ms;
+}
+.navbar-grid-effect:is(.grid-effect-show) {
+  width: 66.66666667%;
+  transition: all 1s ease-in 0s;
+}
+
+.column-8 {
+  width: 66.66666667%;
+}
+
+.column-12 {
+  width: 100%;
+}
+
+.show {
+
+}
+
+.menu-content {
+
+}
