[Task] Set position of menu; add transition to  navbar-toggle

--- a/app/assets/scss/themes/default/flat.scss
+++ b/app/assets/scss/themes/default/flat.scss
@@ -1,7 +1,6 @@
 #menu-button {
   @media (min-width: 992px) {
     .navbar-toggler {
-      //display: block;
     }
   }
 
@@ -14,7 +13,8 @@
   .navbar-toggler {
     padding: 3px;
     font-size: 16px;
-    border-color: #f0f3f4;
+    border-color: transparent;
+    background: #ffa00db5;
   }
 
   .navbar {
@@ -28,6 +28,21 @@
     background-color: #f0f3f4;
     margin: 5px;
     border-radius: 5px;
+    transition: all 0.25s ease-in-out;
+  }
+
+  .menu-bar-0{
+    rotate: 45deg;
+    transform: translate(5px, 6px);
+    transition: all 0.25s ease-in-out;
+  }
+  .menu-bar-1{
+    background: transparent;
+  }
+  .menu-bar-2 {
+    rotate: -45deg;
+    transform: translate(5px, -6px);
+    transition: all 0.25s ease-in-out;
   }
 
   .navbar-toggler-icon {
@@ -47,39 +62,32 @@
 
 .navbar-container {
   display: inline-flex;
-  position: relative;
-  background-color: #f2f2f2;
-  border: 1px solid #bbbbbb;
-  margin-left: 0;
-  left: 100%;
-  transition: all 1s ease-in 100ms;
-  width: 0;
+  position: absolute;
+  background-color: #fff;
+  right: 0;
+  top: 0;
+  transition: all 1s ease-in 0ms;
+  width: 33.33333333%;
 }
 
-.navbar-container:is(.column-4) {
-  left: 0;
-  width: 33.333333333%;
+.navbar-container:is(.column) {
+  width: calc(33.33333333%);
+
 }
 .navbar-container:not(.show) {
   overflow-x: hidden;
   transition: all 1s ease-out 0s;
+  position: absolute;
+  right: -33.33333333%;
 }
 
 .navbar-grid-effect {
   width: 100%;
-  transition: all 1s ease-out 250ms;
+  transition: all 1s ease-out 0ms;
 }
 .navbar-grid-effect:is(.grid-effect-show) {
-  width: 66.66666667%;
+  width: calc(66.66666667%);
   transition: all 1s ease-in 0s;
-}
-
-.column-8 {
-  width: 66.66666667%;
-}
-
-.column-12 {
-  width: 100%;
 }
 
 .show {
