--- a/app/assets/scss/themes/default/landingpage.scss
+++ b/app/assets/scss/themes/default/landingpage.scss
@@ -36,10 +36,10 @@ body {
 
 .sm-icons{
     .margin-left {
-        margin-left: 13rem;
+        margin-left: 8.33333333%;;
     }
     .margin-right {
-        margin-right: 13rem;
+        margin-right: 8.33333333%;;
     }
     a{
         color: #0d1117;
