[Task] Setup menu content

--- a/app/assets/scss/themes/default/threejs.scss
+++ b/app/assets/scss/themes/default/threejs.scss
@@ -5,25 +5,9 @@
 @import "~@fontsource/roboto/700.css";
 @import "~@fontsource/roboto/900.css";
 
-
-
-
-
-/*.content-background-color {
-    !*background-color: rgb(13 16 21 / 80%);*!
-    !* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#090d12+0,1c2f35+100 *!
-    background: #090d12; !* Old browsers *!
-    background: -moz-linear-gradient(27deg,  #090d12 0%, #1c2f35 100%); !* FF3.6-15 *!
-    background: -webkit-linear-gradient(27deg,  #090d12 0%,#1c2f35 100%); !* Chrome10-25,Safari5.1-6 *!
-    background: linear-gradient(27deg,  #090d12 0%,#1c2f35 100%); !* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ *!
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#090d12', endColorstr='#1c2f35',GradientType=1 ); !* IE6-9 fallback on horizontal gradient *!
-
+body {
+  overflow: hidden;
 }
-
-.content-box-shadow {
-    -webkit-box-shadow: 0 80px 100px -10px #000000;
-    box-shadow: 0 80px 100px -10px #000000;
-}*/
 
 .obit-controls-gizmo {
   position: absolute;
@@ -120,8 +104,6 @@
 .mobileControls {
   display: none;
 }
-
-
 
 .pan {
   position: absolute;
