--- a/app/assets/scss/themes/default/flat.scss
+++ b/app/assets/scss/themes/default/flat.scss
@@ -1,3 +1,7 @@
+body {
+  overflow: visible;
+}
+
 #menu-button {
   @media (min-width: 992px) {
     .navbar-toggler {
@@ -75,7 +79,7 @@
 
 }
 .navbar-container:not(.show) {
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
   transition: all 1s ease-out 0s;
   position: absolute;
   right: -33.33333333%;
@@ -96,4 +100,38 @@
 
 .menu-content {
 
+}
+
+.content-container {
+  overflow-x: hidden;
+}
+.menu-container.show ~ .content-container {
+  overflow-x: visible;
+}
+
+.navbar-nav {
+  margin-top: 13rem;
+  align-items: flex-start;
+  .nav-item {
+    margin-left: 4rem;
+    margin-bottom: 5px;
+  }
+
+  .nav-item:last-child {
+    margin-bottom: 0;
+  }
+  .nav-link {
+    padding: 5px;
+    display: flex;
+    align-items: center;
+  }
+  .nav-link.active:before {
+    height: 13px;
+    width: 13px;
+    background-color: #ffa00db5;
+    border-radius: 50%;
+    margin-right: 13px;
+    display: inline-block;
+    content: '';
+  }
 }
