--- a/app/templates/threeDimensional.html.twig
+++ b/app/templates/threeDimensional.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 	<div data-controller="threeDimensional"></div>
-	<div class="overlay">
+	<div id="mainContainer" class="overlay">
 		<div id="versionNotification" class="toast darkToast ms-2 mt-2" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
 			<div class="toast-header">
 				<strong class="me-auto">Version</strong>
