--- a/app/assets/scss/themes/default/flat.scss
+++ b/app/assets/scss/themes/default/flat.scss
@@ -66,7 +66,7 @@ body {
 
 .navbar-container {
   display: inline-flex;
-  position: absolute;
+  position: fixed;
   background-color: #fff;
   right: 0;
   top: 0;
@@ -81,8 +81,11 @@ body {
 .navbar-container:not(.show) {
   /*overflow-x: hidden;*/
   transition: all 1s ease-out 0s;
-  position: absolute;
+  position: fixed;
   right: -33.33333333%;
+  display: inline-flex;
+  top: 0;
+  width: 33.33333333%;
 }
 
 .navbar-grid-effect {
@@ -103,11 +106,11 @@ body {
 }
 
 .content-container {
-  overflow-x: hidden;
+/*  overflow-x: hidden;*/
 }
-.menu-container.show ~ .content-container {
+/*.menu-container.show ~ .content-container {
   overflow-x: visible;
-}
+}*/
 
 .navbar-nav {
   margin-top: 13rem;
@@ -115,6 +118,7 @@ body {
   .nav-item {
     margin-left: 4rem;
     margin-bottom: 5px;
+    cursor: pointer;
   }
 
   .nav-item:last-child {
