[WIP] Scroll UX/UI

--- a/app/templates/flat.html.twig
+++ b/app/templates/flat.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     {{ encore_entry_link_tags('css-flat') }}
-    <div {#class="position-relative overflow-hidden"#} data-controller="flat">
+    <div id="flat" data-controller="flat">
         <div class="nav-top d-flex justify-content-between sm-icons position-sticky z-1 top-0">
             <div class="col-3 margin-left mt-5">
                 <div class="m-3 fs-4">
@@ -45,23 +45,40 @@
             </div>
         </div>
 
-        <div class="position-relative overflow-hidden">
+        <div id="flat" class="position-relative overflow-hidden">
             <div class="container-fluid content-container p-0 m-0">
                 <div class="row p-0 m-0 ">
                     <div class="border navbar-grid-effect">
                         <div class="container">
-                            <section id="home" class="row" style="height:800px">
+                            <section id="home" class="row">
                                     <div class="col ">
                                         Content
                                     </div>
                             </section>
-                            <section id="about" class="row" style="height:800px">
+                            <section id="about" class="row">
                                 <div class="col">
-                                    About
+                                    <p>About</p>
+                                    <p>About</p>
+                                    <p>About</p>
+                                    <p>About</p>
+                                    <p>About</p>
+                                    <p>About</p>
+                                    <p>About</p>
+                                    <p>About</p>
+                                    <p>About</p>
+                                    <p>About</p>
+                                    <p>About</p>
+                                    <p>About</p>
+                                    <p>About</p>
+                                    <p>About</p>
+                                    <p>About</p>
+                                    <p>About</p>
+                                    <p>About</p>
+                                    <p>About</p>
                                 </div>
                             </section>
 
-                            <section id="work" class="row" style="height:555px">
+                            <section id="work" class="row">
                                 <div class="col">
                                     asd
                                 </div>
