--- a/app/templates/flat.html.twig
+++ b/app/templates/flat.html.twig
@@ -48,39 +48,19 @@
         <div id="flat" class="position-relative overflow-hidden">
             <div class="container-fluid content-container p-0 m-0">
                 <div class="row p-0 m-0 ">
-                    <div class="border navbar-grid-effect">
+                    <div class="navbar-grid-effect">
                         <div class="container">
                             <section id="home" class="row">
                                     <div class="col ">
-                                        Content
                                     </div>
                             </section>
                             <section id="about" class="row">
                                 <div class="col">
-                                    <p>About</p>
-                                    <p>About</p>
-                                    <p>About</p>
-                                    <p>About</p>
-                                    <p>About</p>
-                                    <p>About</p>
-                                    <p>About</p>
-                                    <p>About</p>
-                                    <p>About</p>
-                                    <p>About</p>
-                                    <p>About</p>
-                                    <p>About</p>
-                                    <p>About</p>
-                                    <p>About</p>
-                                    <p>About</p>
-                                    <p>About</p>
-                                    <p>About</p>
-                                    <p>About</p>
                                 </div>
                             </section>
 
                             <section id="work" class="row">
                                 <div class="col">
-                                    asd
                                 </div>
                             </section>
                         </div>
