--- a/app/templates/threeDimensional.html.twig
+++ b/app/templates/threeDimensional.html.twig
@@ -60,12 +60,28 @@
 
 	<div class="cameraContainer">
 		<div class="domContainer content-subject">
-			<div class="text-white">
-				<p class="fs-1">Hi, my name is Sebastian</p>
-				<p class="fs-4">and I love programming</p>
-				<p class="fs-6 mt-5">Sadly, this site is not finished yet, but you can see what you can do with threejs ;)</p>
+			<div class="text-white" style="width: 800px">
+				<p class="fs-1 ap-1">Hi, my name is Sebastian</p>
+				<p class="fs-4 ap-2 ">and I love programming</p>
+				<p class="fs-5 mt-5 ap-3">Sadly, this website is not finished yet. I'm trying to hurry ;)</p>
+				<p class="fs-6 mt-2 ap-4">But I will give you some information about this site and how to use it</p>
+				<div class="fs-6 ap-5">
+					<ul>
+						<li>Build with Three.js</li>
+						<ul>
+							<li><code>Three.js is a cross-browser JavaScript library and application programming interface (API) used to create and display animated 3D computer graphics in a web browser using WebGL</code></li>
+						</ul>
+						<li>To move around the website
+							<ul>
+								<li>you can scroll to change to zoom like google maps</li>
+								<li>rotate with the left mouse button pressed</li>
+								<li>or move with the right mouse button pressed</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 				<a href="{{ path('index') }}">
-					<button class="btn btn-orange py-2 fs-5 fw-bold mt-4 rounded-5 px-4">Get in touch</button>
+					<button class="btn btn-orange py-2 fs-5 fw-bold mt-4 rounded-5 px-4 ap-6">Get in touch</button>
 				</a>
 			</div>
 		</div>
