--- a/app/assets/scss/themes/default/index.scss
+++ b/app/assets/scss/themes/default/index.scss
@@ -1,4 +1,11 @@
 // Custom scss
+@import "~@fontsource/roboto/100.css";
+@import "~@fontsource/roboto/300.css";
+@import "~@fontsource/roboto/400.css";
+@import "~@fontsource/roboto/500.css";
+@import "~@fontsource/roboto/700.css";
+@import "~@fontsource/roboto/900.css";
+
 @import '~@fortawesome/fontawesome-free/css/all.css';
 @import '~material-icons/iconfont/material-icons';
 
