[BUGFIX] Fix responsive design on landingpage

--- a/app/assets/scss/themes/default/landingpage.scss
+++ b/app/assets/scss/themes/default/landingpage.scss
@@ -4,6 +4,7 @@ body {
     background: #c2c7bf;
     color: #0d1117;
 }
+
 .lp-box {
     .font {
         font-weight: 300;
@@ -75,5 +76,27 @@ body {
         box-shadow: inherit;
         padding: inherit;
         vertical-align: inherit;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    .sm-icon-container {
+        display: flex;
+        flex-direction: column;
+        margin-top: 0 !important;
+
+        .github {
+            margin-left: 0 !important;
+        }
+        .linkedin {
+            margin-left: 0 !important;
+        }
+        .e-mail {
+            margin-left: 0 !important;
+        }
+    }
+
+    .lp-box {
+        height: unset !important;
     }
 }
