--- a/app/templates/flat.html.twig
+++ b/app/templates/flat.html.twig
@@ -5,29 +5,29 @@
     <div id="flat" data-controller="flat">
         <div class="nav-top d-flex justify-content-between sm-icons position-sticky z-1 top-0">
             <div class="col-3 margin-left mt-5">
-                <div class="m-3 fs-4">
-                    <a class="d-inline-block me-4" href="{{ path('index') }}">
+                <div class="m-3 fs-4 sm-icon-container">
+                    <a class="d-inline-block me-4 back-button" href="{{ path('index') }}">
                         <i class="fa-solid fa-chevron-left"></i>
                     </a>
-                    <a class="d-inline-block" href="https://github.com/s-meiser" target="_blank">
+                    <a class="d-inline-block github" href="https://github.com/s-meiser" target="_blank">
                         <i class="fa-brands fa-github"></i>
                     </a>
-                    <a class="mx-2 d-inline-block" href="https://www.linkedin.com/in/sebastian-meiser/" target="_blank">
+                    <a class="mx-2 d-inline-block linkedin" href="https://www.linkedin.com/in/sebastian-meiser/" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
-                    <a class="mx-2 d-inline-block" href="mailto:sebastian.meiser@gmail.com" target="_blank">
+                    <a class="mx-2 d-inline-block e-mail" href="mailto:sebastian.meiser@gmail.com" target="_blank">
                         <i class="fa-regular fa-envelope"></i>
                     </a>
                 </div>
             </div>
 
-            <div class="col-3 margin-right mt-5">
+            <div class="col-sm-3 margin-right mt-5">
                 <div class="p-3 border ">
                     <div class="d-flex justify-content-between align-items-center">
-                        <div class="col text-uppercase text-end ">
-                            Hi, my name is Sebastian
+                        <div class="col text-uppercase text-end">
+                            I'am the menu, click on me
                         </div>
-                        <div id="menu-button" class="d-flex col-2 text-end justify-content-end ">
+                        <div id="menu-button" class="ms-2">
                             <nav class="navbar" >
                                 <button class="navbar-toggler"
                                         type="button"
@@ -49,10 +49,12 @@
             <div class="container-fluid content-container p-0 m-0">
                 <div class="row p-0 m-0 ">
                     <div class="navbar-grid-effect">
-                        <div class="container">
-                            <section id="home" class="row">
-                                    <div class="col ">
-                                    </div>
+                        <div class="container nav-top-height">
+                            <section id="home" class="row ">
+                                <div class="col ">
+                                    <h1> Hi, my name is Sebastian</h1>
+                                    <p class="fs-4">and I love programming</p>
+                                </div>
                             </section>
                             <section id="about" class="row">
                                 <div class="col">
