--- a/app/templates/flat.html.twig
+++ b/app/templates/flat.html.twig
@@ -58,6 +58,46 @@
                             </section>
                             <section id="about" class="row">
                                 <div class="col">
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
+                                    <p>much more content</p>
                                 </div>
                             </section>
 
