--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -30,6 +30,11 @@
 		<div class="d-flex justify-content-center align-items-center align-self-center px-4 vh-75 lp-box">
 			<div class="row gx-5 font d-flex align-items-center">
 				<div class="col-sm text-center">
+					<div class="commandLineToolTip position-absolute p-1 rounded-1">
+						<i class="fa-solid fa-terminal"></i>
+						<code>Hover Me</code>
+						<i class="fa-solid fa-share commandLineToolTip-arrow"></i>
+					</div>
 					<a class="link-unstyled" href="{{ path('flat') }}">
 						<div id="animateDiv" class="p-3 border bg-creme box-shadow min-height d-flex align-items-center justify-content-center">
 							Enter Website in 2D
