--- a/app/templates/landingpage.html.twig
+++ b/app/templates/landingpage.html.twig
@@ -36,14 +36,14 @@
 						<i class="fa-solid fa-share commandLineToolTip-arrow"></i>
 					</div>
 					<a class="link-unstyled" href="{{ path('flat') }}">
-						<div id="animateDiv" class="p-3 border bg-creme box-shadow min-height d-flex align-items-center justify-content-center">
+						<div id="animateDiv" class="lp-box-flat p-3 border bg-creme box-shadow min-height d-flex align-items-center justify-content-center">
 							Enter Website in 2D
 						</div>
 					</a>
 				</div>
 				<div class="col-sm text-center">
 					<a class="link-unstyled" href="{{ path('threeDimensional') }}">
-						<div id="animateDiv" class="p-3 border bg-creme box-shadow min-height d-flex align-items-center justify-content-center">
+						<div id="animateDiv" class="lp-box-threejs p-3 border bg-creme box-shadow min-height d-flex align-items-center justify-content-center">
 							Enter Website in 3D
 						</div>
 					</a>
